@@ -1,3 +1,9 @@
+2008-04-10  Florian Wiessner <f.wiessner@smart-weblications.de>
+	* Added fsck support in query.c
+	* Added -ofsck=1 switch to mysqlfs, fsck is only done when 
+	  -ofsck=1 is set on commandline.
+	* Updated TODO File
+
 2008-04-09  Michal Ludvig  <michal@logix.cz>
 
 	* Migrated from CVS to SVN
